Added permaFilter to index page - also fixed the bug that the news archive lists news that have not been not published

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,10 +1,8 @@
-$http_images_path: "../";
-
 /* 
  * Functions
  */
-@function image-url($relative-url){
-  $tmpUrl: $http_images_path + $relative-url;
+@function base-url($relative-url){
+  $tmpUrl: "../" + $relative-url;
   @return url($tmpUrl);
 }
 
