--- a/scss/frontend.scss
+++ b/scss/frontend.scss
@@ -1,4 +1,4 @@
-@import "base";
+@import 'base';
 
 $primaryColor: #ff6100;
 
@@ -177,7 +177,7 @@ h1.page-title { }
 .page-downloads {
     .downloadcats .downloadcat { display: block; float: left; width: 100px; margin: 0px 20px 20px 20px; text-align: center; }
     .downloads .download { 
-        display: block; float: left; width: 100px; margin: 0px 20px 20px 20px; text-align: center; background-image: image-url('theme/file.png'); background-position: center top; background-repeat: no-repeat;
+        display: block; float: left; width: 100px; margin: 0px 20px 20px 20px; text-align: center; background-image: base-url('theme/file.png'); background-position: center top; background-repeat: no-repeat;
         a { display: block; padding-top: 100px; background-position: center 20px; background-repeat: no-repeat; }
     }
 }
