--- a/scss/frontend.scss
+++ b/scss/frontend.scss
@@ -264,7 +264,7 @@ $forumsBoxColor: #EEE;
 }
 
 /* Forums show_thread page */
-.page-forumthreads, .page-forumposts {
+.page-threads, .page-posts {
     .buttons { margin-bottom: 20px }
     .post { 
         $metaWidth: 100px;
