--- a/public/libs/formstone/selecter.css
+++ b/public/libs/formstone/selecter.css
@@ -1,4 +1,4 @@
-	.selecter-element { *left: -999999px; position: absolute; opacity: 0; }
+	.selecter-element { left: -999999px; position: absolute; opacity: 0; }
 	.selecter { display: inline-block; margin: 0; position: relative; min-width: 150px; z-index: 1; vertical-align: middle; }
 	.selecter .selecter-selected { height: 22px; line-height: 22px; background: #F9F9F9 url(selecter_arrow.png) no-repeat right center; border: 1px solid #ccc; border-radius: 3px; color: #333; cursor: pointer; display: block; font-size: 13px; margin: 0; overflow: hidden; padding: 5px 40px 5px 10px; position: relative; text-overflow: clip; z-index: 49; }
 	.selecter .selecter-options { box-sizing: border-box; border: 1px solid #ccc; border-width: 0 1px 1px; background-color: #fefefe; border-radius: 0 0 3px 3px; box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15); display: none; left: 0; margin: 0; max-height: 260px; overflow: auto; overflow-x: hidden; padding: 0; position: absolute; top: 100%; width: auto; *width: auto; min-width: 100%; z-index: 50; }
