--- a/less/backend.less
+++ b/less/backend.less
@@ -55,7 +55,7 @@ select:not([size]) { margin: 0px; padding: 0px 10px; border: 1px solid #CCC; bor
 .page { }
 .form-head { 
     display: block; height: 60px; line-height: 60px; margin-bottom: 20px; padding-left: 15px; .background-image('theme/backend/form_head.png'); font-size: 14px; font-weight: bold !important; color: #666666 !important;
-    img { margin-right: 10px; vertical-align: text-top; }
+    i { margin-right: 10px; padding: 2px 3px; border-radius: 3px; background-color: #4082E3; color: white }
 }
 
 h1.page-title { }
@@ -307,19 +307,21 @@ body { font-family: 'Open Sans', Arial; font-size: 13px; color: #666; background
 }
 .selected {  }
 .submenu {
-     a, a:visited { position: absolute; left: 0px; top: 0px; width: 233px; height: 100%; color: #CCCCCC; z-index: 2 }
+    a, a:visited { position: absolute; left: 0px; top: 0px; width: 233px; height: 100%; color: #CCCCCC; z-index: 2 }
     a:hover, a:active { color: #ff6100 }
-    img { position: absolute; left: 28px; }
+    i { position: absolute; left: 25px; width: 22px; text-align: center; }
     .item { 
-        position: relative; .background-image('theme/backend/nav_item_mid.png'); text-indent: 60px; height: 38px; line-height: 38px;
-        img { top: 13px }
+        &:hover { color: #ff6100 }
+        position: relative; .background-image('theme/backend/nav_item_mid.png'); height: 38px; line-height: 38px;
+        a { text-indent: 60px;  }
+        i { top: 13px }
         &:first-child { 
             .background-image('theme/backend/nav_item_top.png'); height: 46px; line-height: 54px;
-            img { top: 20px }
+            i { top: 20px }
         }
         &:last-child { 
             .background-image('theme/backend/nav_item_bot.png'); height: 49px; line-height: 42px;
-            img { top: 13px }
+            i { top: 15px }
         }
     }
 }
