Replaced more image icons with font icons

--- a/less/backend.less
+++ b/less/backend.less
@@ -199,8 +199,8 @@ ul.pagination li {
 
 .page-visitors {
     #chart { margin: 0px 0px 20px 5%; width: 90%; height: 200px }
-    .page-visitors table.days th { width: 50% }
-    .page-visitors table.days tr.hover td { background-color: #DDD; background-image: none }
+    table.days th { width: 50% }
+    table.days tr.hover td { background-color: #DDD; background-image: none }
 }
 
 .page-members {
