Forum bugfix, style improvements, etc.

--- a/less/backend.less
+++ b/less/backend.less
@@ -113,8 +113,8 @@ h2.section { height: 30px; line-height: 30px; margin: 20px 0px; padding: 0px 10p
 }
 
 /* Search-Box */
-.search-box input[type=text] { width: 170px; padding: 1px 10px; .background-image('theme/backend/bg_searchbox.png'); background-repeat: no-repeat; text-indent:20px }
-.form-helpers .search-box { float: right; }
+.model-search-box input[type=text] { width: 170px; padding: 1px 10px; .background-image('theme/backend/bg_searchbox.png'); background-repeat: no-repeat; text-indent:20px }
+.form-helpers .model-search-box { float: right; }
 
 /* Sort-Switcher */
 .sort-switcher { 
