--- a/less/frontend.less
+++ b/less/frontend.less
@@ -47,10 +47,21 @@ a:hover { color: @primaryColor; }
     textarea { height: auto }
 }
 
+/* Search box for model index pages */
+.model-search-box {
+    margin-bottom: 10px; text-align: right;
+    input {
+        .form-control(); width: auto; display: inline-block;
+    }
+    .btn {
+        vertical-align: top;
+    }
+}
+
 /* Captcha */
 .captcha {
     input {
-        width: 100px; display: inline-block;       
+        width: 100px; display: inline-block;
     }
 }
 
