--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -6422,6 +6422,60 @@ textarea.form-group textarea {
 .form-group textarea {
   height: auto;
 }
+/* Search box for model index pages */
+.model-search-box {
+  margin-bottom: 10px;
+  text-align: right;
+}
+.model-search-box input {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555555;
+  background-color: #ffffff;
+  background-image: none;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  width: auto;
+  display: inline-block;
+}
+.model-search-box input:focus {
+  border-color: #66afe9;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
+}
+.model-search-box input::-moz-placeholder {
+  color: #999999;
+  opacity: 1;
+}
+.model-search-box input:-ms-input-placeholder {
+  color: #999999;
+}
+.model-search-box input::-webkit-input-placeholder {
+  color: #999999;
+}
+.model-search-box input[disabled],
+.model-search-box input[readonly],
+fieldset[disabled] .model-search-box input {
+  cursor: not-allowed;
+  background-color: #eeeeee;
+  opacity: 1;
+}
+textarea.model-search-box input {
+  height: auto;
+}
+.model-search-box .btn {
+  vertical-align: top;
+}
 /* Captcha */
 .captcha input {
   width: 100px;
